<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".stampDuty.StampDuty">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/stamp_duty"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:textAlignment="center"
                    android:textColor="#DADDE1"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv1" />
                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv2"
                    app:srcCompat="@drawable/ic_stampduty" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_line_"
                    android:drawablePadding="10dp"
                    android:text="@string/your_state"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rate_of_gst" />
                <FrameLayout
                    android:id="@+id/fl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_edittext"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv5">

                    <TextView
                        android:fontFamily="@font/popin_medium"
                        android:id="@+id/tv8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:paddingHorizontal="5dp"
                        android:paddingTop="3dp"
                        android:drawableTint="#dadde1"
                        android:hint="Select your state "
                        android:singleLine="true"
                        android:textColor="@color/text_color_blue"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/tv4" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawableEnd="@drawable/ic_line_"
                    android:drawablePadding="10dp"
                    android:text="@string/property_value"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_rupees"
                    android:drawablePadding="10dp"
                    android:hint="Enter property value"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/tv3" />




                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="15dp"
                    android:backgroundTint="@color/app_color"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/calculate"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rg_gst"
                    />
                <LinearLayout
                    android:id="@+id/cv1"
                    android:layout_width="match_parent"
                    android:background="@drawable/border_black"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/app_color"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/rule_of_tds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/text_color_blue"
                        android:textSize="15sp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>